--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,7 @@ matrix:
 
 before_install:
     - eval "${MATRIX_EVAL}"
-    - cd 3rdparty/boost
-    - ./bootstrap.sh && ./b2
+    - cd 3rdparty/boost && ./bootstrap.sh && ./b2
     - cd $TRAVIS_BUILD_DIR
 
 before_script:
