--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,37 @@ matrix:
             - g++-5
       env:
          - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
+         - CONFIGURE_FLAGS="-DENABLE_EXTRA_BUILDBOT_CODE=ON"
+    - os: linux
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-6
+      env:
+         - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
+         - CONFIGURE_FLAGS="-DENABLE_EXTRA_BUILDBOT_CODE=ON"
+    - os: linux
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-7
+      env:
+         - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
+         - CONFIGURE_FLAGS="-DENABLE_EXTRA_BUILDBOT_CODE=ON"
+    - os: linux
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-8
+      env:
+         - MATRIX_EVAL="CC=gcc-8 && CXX=g++-8"
+         - CONFIGURE_FLAGS="-DENABLE_EXTRA_BUILDBOT_CODE=ON"
 
 before_install:
     - eval "${MATRIX_EVAL}"
