使 travis-ci 能将程序编译成复兴前版本进行测试

--- a/.lgtm.yml
+++ b/.lgtm.yml
@@ -1,6 +1,9 @@
 queries:
   - exclude: cpp/potentially-dangerous-function
 extraction:
+  cpp:
+    after_prepare:
+      - cd 3rdparty/boost && ./bootstrap.sh && ./b2
   python:
     python_setup: 
       version: 3
