--- a/.travis.yml
+++ b/.travis.yml
@@ -44,6 +44,46 @@ matrix:
       env:
          - MATRIX_EVAL="CC=gcc-8 && CXX=g++-8"
          - CONFIGURE_FLAGS="-DENABLE_EXTRA_BUILDBOT_CODE=ON"
+    - os: linux
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-5
+      env:
+         - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
+         - CONFIGURE_FLAGS="-DENABLE_EXTRA_BUILDBOT_CODE=ON -DENABLE_PRERE_MODE=ON"
+    - os: linux
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-6
+      env:
+         - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
+         - CONFIGURE_FLAGS="-DENABLE_EXTRA_BUILDBOT_CODE=ON -DENABLE_PRERE_MODE=ON"
+    - os: linux
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-7
+      env:
+         - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
+         - CONFIGURE_FLAGS="-DENABLE_EXTRA_BUILDBOT_CODE=ON -DENABLE_PRERE_MODE=ON"
+    - os: linux
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-8
+      env:
+         - MATRIX_EVAL="CC=gcc-8 && CXX=g++-8"
+         - CONFIGURE_FLAGS="-DENABLE_EXTRA_BUILDBOT_CODE=ON -DENABLE_PRERE_MODE=ON"
 
 before_install:
     - eval "${MATRIX_EVAL}"
@@ -58,7 +98,7 @@ script:
   - ./tools/ci/npc.sh
   - mkdir cbuild || travis_terminate 1
   - cd cbuild || travis_terminate 1
-  - cmake -G "Unix Makefiles" .. || travis_terminate 1
+  - cmake -G "Unix Makefiles" .. $CONFIGURE_FLAGS || travis_terminate 1
   - make || travis_terminate 1
   - cd $TRAVIS_BUILD_DIR || travis_terminate 1
   - ./login-server --run-once
